--- a/kubevirt/package.json
+++ b/kubevirt/package.json
@@ -31,7 +31,8 @@
     ]
   },
   "devDependencies": {
+    "@headlamp-k8s/eslint-config": "^0.7.0",
     "@kinvolk/headlamp-plugin": "^0.10.0",
-    "@headlamp-k8s/eslint-config": "^0.7.0"
+    "eslint": "^8.57.1"
   }
 }
