--- a/.github/workflows/headlamp.yaml
+++ b/.github/workflows/headlamp.yaml
@@ -20,12 +20,6 @@ jobs:
       - uses: actions/checkout@v2
       - id: dirs
         run: echo "dirs=$(grep -m1 -lR @kinvolk/headlamp-plugin ./*/package.json | xargs -n1 dirname | jq --raw-input --slurp --compact-output 'split("\n")[:-1]')" >> ${GITHUB_OUTPUT}
-  release:
-    needs: find_plugin_dirs
-    runs-on: ubuntu-latest
-    steps:
-
-      - uses: actions/checkout@v2
 
 
   build:
@@ -57,6 +51,8 @@ jobs:
           
       - name: Create Release
         id: create_release
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
             name=$(jq -r .name ${{ matrix.dir }}/package.json)
             version=$(jq -r .version ${{ matrix.dir }}/package.json)
