--- a/.github/workflows/headlamp.yaml
+++ b/.github/workflows/headlamp.yaml
@@ -52,9 +52,7 @@ jobs:
           npx @kinvolk/headlamp-plugin@$HEADLAMP_PLUGIN_VERSION tsc ${{ matrix.dir }}
       - env:
           GH_TOKEN: ${{ github.token }}
-        only:
-          - push:
-              branches: [main]
+        if: github.ref == 'refs/heads/master'
         run: |    
           name=$(jq -r .name ${{ matrix.dir }}/package.json)
           version=$(jq -r .version ${{ matrix.dir }}/package.json)
