--- a/kubevirt/package.json
+++ b/kubevirt/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kubevirt",
-  "version": "v0.0.1-beta3",
+  "version": "v0.0.1-beta4",
   "description": "A plugin for managing KubeVirt virtual machines within a Kubernetes cluster.",
   "scripts": {
     "start": "headlamp-plugin start",
@@ -20,7 +20,8 @@
     "kubernetes",
     "kubernetes-ui",
     "kubernetes-debugging",
-    "plugins"
+    "plugins",
+    "kubevirt"
   ],
   "prettier": "@headlamp-k8s/eslint-config/prettier-config",
   "eslintConfig": {
@@ -30,9 +31,10 @@
       "plugin:jsx-a11y/recommended"
     ]
   },
+  "overrides": {
+    "typescript": "5.6.2"
+  },
   "devDependencies": {
-    "@headlamp-k8s/eslint-config": "^0.7.0",
-    "@kinvolk/headlamp-plugin": "^0.10.0",
-    "eslint": "^8.57.1"
+    "@kinvolk/headlamp-plugin": "^0.12.0"
   }
 }
