--- a/.github/workflows/headlamp.yaml
+++ b/.github/workflows/headlamp.yaml
@@ -27,6 +27,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      id-token: write
 
     defaults:
       run:
@@ -50,6 +51,13 @@ jobs:
           echo "PLUGIN_VERSION=$version" >> $GITHUB_ENV
           echo "TAG_NAME=$tag_name" >> $GITHUB_ENV
           echo "CLEAN_DIR=$clean_dir" >> $GITHUB_ENV
+      - name: ghcr-login
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
