--- a/capsule/package.json
+++ b/capsule/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capsule-plugin",
-  "version": "0.1.0",
+  "version": "0.1.0-beta1",
   "description": "Your Headlamp plugin",
   "scripts": {
     "start": "headlamp-plugin start",
